<project
	xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.cdac</groupId>
	<artifactId>controller</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<description>IOT webapplication</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<spring.version>6.1.0</spring.version>
		<jakarta.servlet.api.version>6.0.0</jakarta.servlet.api.version>
		<jakarta.jsp.jstl.version>3.0.0</jakarta.jsp.jstl.version>
		<jakarta.jsp.api.version>3.1.1</jakarta.jsp.api.version>
		<lombok.version>1.18.30</lombok.version>
		<jaxb.runtime.version>4.0.3</jaxb.runtime.version>
		<wildfly.maven.plugin.version>4.2.0.Final</wildfly.maven.plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		
		<dependency>
			<groupId>jakarta.servlet.jsp.jstl</groupId>
			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
			<version>${jakarta.jsp.jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
			<version>${jakarta.jsp.jstl.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>${jakarta.servlet.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp</groupId>
			<artifactId>jakarta.servlet.jsp-api</artifactId>
			<version>${jakarta.jsp.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>${jaxb.runtime.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.12</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.14</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
    		<groupId>org.modelmapper</groupId>
    		<artifactId>modelmapper</artifactId>
    		<version>3.2.0</version> 
    	</dependency>
    	<dependency>
        	<groupId>org.springframework.data</groupId>
        	<artifactId>spring-data-cassandra</artifactId>
        	<version>4.2.3</version> <!-- Turing-SR3 as of now -->
    	</dependency>
		<!-- Datastax Java Driver (required by Spring Data Cassandra) -->
    	<dependency>
        	<groupId>com.datastax.oss</groupId>
        	<artifactId>java-driver-core</artifactId>
        	<version>4.17.0</version>
    	</dependency>
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
			</plugin>
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-maven-plugin</artifactId>
				<version>${wildfly.maven.plugin.version}</version>
				<configuration>
					<javaOpts>
						<javaOpt>--add-modules=jdk.unsupported</javaOpt>
						<javaOpt>--add-opens=java.base/java.lang=ALL-UNNAMED</javaOpt>
						<javaOpt>--add-opens=java.base/java.util=ALL-UNNAMED</javaOpt>
						<javaOpt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</javaOpt>
						<javaOpt>--add-opens=java.base/java.io=ALL-UNNAMED</javaOpt>
					</javaOpts>
					<hostname>127.0.0.1</hostname>
					<port>9990</port>
					<username>admin</username>
					<password>admin</password>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>